@@ -1,3 +1,8 @@
+2019-04-29 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Support Ɔ (open O) in roman numbers
+	* Fixes for '|' in roman numbers
+
 2019-04-27 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Recognize "factor" and "expand" commands at the beginning of the expression
